--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "build:cjs": "tsc -p tsconfig.json",
     "build:esm": "tsc -p tsconfig.esm.json",
     "test": "jest",
-    "lint": "eslint src --ext .ts",
+    "test:watch": "jest --watch",
+    "lint": "eslint src --ext .ts --fix",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
-    "preversion": "npm run lint",
+    "prepublishOnly": "npm run build",
+    "preversion": "npm run lint && npm test",
     "version": "git add -A src",
     "postversion": "git push && git push --tags"
   },
